gcc/testsuite/gm2/iso/fail/badarray.mod
MODULE badarray ;

VAR
   c: CARDINAL ;
BEGIN
   c[1] := 5
END badarray.
